k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shengri
  labels:
    app: shengri
